--- a/platforms/browser/www/pages/usuario/registro.html
+++ b/platforms/browser/www/pages/usuario/registro.html
@@ -1,5 +1,6 @@
 <section data-role="page" id="usuario-registro" data-theme="c">
-	<div data-role="content" class="infinite-block">
+	<div data-role="content" 
+>
 		<div class="register-box">
 			<h3 class="text-center">Ingrese los datos solicitados</h3>
 			<div class="row center-xs">
