--- a/www/pages/usuario/dashboard.html
+++ b/www/pages/usuario/dashboard.html
@@ -8,40 +8,41 @@
 		<span class="text-blue">S</span></h1>
 		<a href="#" onclick="closeSession()" class="ui-btn ui-btn-right"><i class="la la-power-off"></i></a>
 	</div>
-	<div data-role="content" class="infinite-block">
+	<div data-role="content" 
+>
 		<div class="basic-box">
 			<h3>Hola <span id=tx_nombres></span>,</h3>
-			<p>Estas son tus credenciales:</p>
+			<p class="text-center text-bold">Estas son tus credenciales:</p>
 			<div class="table-responsive" id="listaCredenciales">
 				<div class="text-center" style="height: 80px">
 					Cargando...<br/>
 					<i class="la la-sync la-spin la-3x"></i>
 				</div>
 			</div>
-			<p class="text-right"><a href="registro-credenciales.html" class="text-nostyle">¿Falta alguna credencial?</a></p>
+			<p class="text-right text-bold"><a href="registro-credenciales.html" class="text-nostyle">¿Falta alguna credencial?</a></p>
 			
 		</div>
 		<div class="basic-box">
-			<p>Descuentos de hoy</p>
-			<div id="listaDescuentos" class="table-responsive">
+			<p class="text-center text-bold">Descuentos de hoy</p>
+			<div id="listaDescuentosUsuario" class="table-responsive">
 				<div class="text-center" style="height: 80px">
 					Cargando...<br/>
 					<i class="la la-sync la-spin la-3x"></i>
 				</div>
 			</div>
-			<p class="text-right"><a href="descuentos.html" class="text-nostyle">Ver Más Descuentos</a></p>
+			<p class="text-right text-bold"><a href="descuentos.html" class="text-nostyle">Ver Más Descuentos</a></p>
 		</div>
 		<div class="basic-box">
-			<p>¿Qué descuento estás buscando?</p>
-			<div class="row" id="listaRubros">
+			<p class="text-center text-bold">¿Qué descuento estás buscando?</p>
+			<div class="row" id="listaRubrosUsuario">
 				<div class="text-center" style="height: 80px">
 					Cargando...<br/>
 					<i class="la la-sync la-spin la-3x"></i>
 				</div>
 			</div>
 		</div>
-		<div class="basic-box"><p>Top Beneficios del Mes</p>
-		<div id="listaTopDescuentos" class="table-responsive">
+		<div class="basic-box"><p class="text-center text-bold">Top Beneficios del Mes</p>
+		<div id="listaTopDescuentosUsuario" class="table-responsive">
 			<div class="text-center" style="height: 80px">
 				Cargando...<br/>
 				<i class="la la-sync la-spin la-3x"></i>
