--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -11,14 +11,12 @@
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" /> 
 	<link rel="stylesheet" href="css/line-awesome.min.css">
 	<link rel="stylesheet" href="css/flexboxgrid.min.css">
-	<link rel="stylesheet" href="css/jcarousel-responsive.css">
 	<link rel="stylesheet" href="css/index.css">
 
 	<link rel="apple-touch-icon" href="img/favicon.png">
 	<link rel="icon" type="image/png" href="img/favicon.png">
 
-	<script src="js/lib/jquery.js"></script>
-	<script src="js/lib/jquery.jcarousel.min.js"></script>
+	<script src="js/lib/jquery.min.js"></script>
 	<script src="js/lib/jquery.mask.min.js"></script>
 	<script src="cordova.js"></script>
 	<script src="js/index.js"></script>
