--- a/platforms/browser/www/pages/usuario/login.html
+++ b/platforms/browser/www/pages/usuario/login.html
@@ -18,6 +18,9 @@
 					<p class="text-right">
 						<a href="olvido.html" class="text-nostyle">¿Olvidó su Clave?</a>
 					</p>
+					<p class="text-right">
+						<a href="../index.html" class="text-nostyle">Regresar al Inicio</a>
+					</p>
 				 </div>
 			 </div>
 		 </div>
